--- a/02_vite/package.json
+++ b/02_vite/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "server": "tsx src/server.ts",
-    "dev": "vite",
     "start": "node ./dist/server.js",
+    "dev:ssr": "tsx watch src/server.ts",
+    "dev": "vite",
     "build": "npm run build:app && npm run build:views && npm run build:server",
     "build:app": "vite build",
     "build:server": "tsc -p tsconfig.server.json",
@@ -16,7 +16,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "shmaker": "^1.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -24,11 +25,13 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
+    "axios": "^1.12.2",
     "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "react-router-dom": "^7.9.3",
     "tsx": "^4.20.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
